--- a/BookMySHOWCopy/book.html
+++ b/BookMySHOWCopy/book.html
@@ -35,41 +35,51 @@
       <li><h3 style="margin-left: 50px;">Recommended Movies</h3></li>
       <li style="float: right; margin-right: 30px;">See all</li>
     </ul>
-    <section class="container" style="float: left; margin-left: 23px;" >
-      <div class="row">
-        <div class="col-sm-3 text-center">
-          <a href="https://in.bookmyshow.com/hyderabad/movies/yashoda/ET00323318"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjJrIGxpa2Vz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00323318-dcstamlpka-portrait.jpg" class="movie_img" class="img-responsive img-fluid" style="text-decoration: none;">
-            <br>
-          <h5 class="name" style="color: black;">Yashoda</h5>
-          </a>
-        </div>
-        <div class="col-sm-3 text-center">
-          <a href="https://in.bookmyshow.com/hyderabad/movies/black-panther-wakanda-forever/ET00310792">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjI2ayBsaWtlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00310792-qkfgylplju-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-          <br>
-          <h5 class="name" style="color: black;">Wakanda</h5>
-          </a>
-        </div>
-        <div class="col-sm-3 text-center">
-          <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC4xLzEwICA3LjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00341179-tylysxlgkl-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-          <br>
-          <h5 class="name" style="color: black;">Urwashi</h5>
-          </a>
-        </div>
-        <div class="col-sm-3 text-center">
-          <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-          <br>
-          <h5 class="name" style="color: black;">Kantara</h5>
-          </a>
-        </div>
-      </div>
+    <section class="container" style="float: left; margin-left: 23px;">
+      <table>
+        <th>
+          <td>
+            <div style="padding: 10px;">
+              <a href="https://in.bookmyshow.com/hyderabad/movies/yashoda/ET00323318"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjJrIGxpa2Vz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00323318-dcstamlpka-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+                <br>
+              <h5 class="name" style="color: black;">Yashoda</h5>
+              </a>
+            </div>
+          </td>
+          <td>
+            <div style="padding: 10px;">
+              <a href="https://in.bookmyshow.com/hyderabad/movies/black-panther-wakanda-forever/ET00310792">
+              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjI2ayBsaWtlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00310792-qkfgylplju-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+              <br>
+              <h5 class="name" style="color: black;">Wakanda</h5>
+              </a>
+            </div>
+          </td>
+          <td>
+            <div style="padding: 10px;">
+              <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
+              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC4xLzEwICA3LjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00341179-tylysxlgkl-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+              <br>
+              <h5 class="name" style="color: black;">Urwashi</h5>
+              </a>
+            </div>
+          </td>
+          <td>
+            <div style="padding: 10px;">
+              <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
+              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+              <br>
+              <h5 class="name" style="color: black;">Kantara</h5>
+              </a>
+            </div>
+          </td>
+        </th>
+      </table>
     </section>
 
 
     <br><br><br>
-    <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/stream-leadin-web-collection-202210241242.png" style="margin-left: 50px;width: 1280px; padding-top: 10px;" class="img-responsive img-fluid">
+    <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/stream-leadin-web-collection-202210241242.png" style="margin-left: 40px;width: 1280px; padding-top: 10px;" class="img-responsive img-fluid">
 
     <br><br><br><br>
     <section style="background-color:#2c344b;">
