--- a/BookMySHOWCopy/book.html
+++ b/BookMySHOWCopy/book.html
@@ -35,48 +35,63 @@
       <li><h3 style="margin-left: 50px;">Recommended Movies</h3></li>
       <li style="float: right; margin-right: 30px;">See all</li>
     </ul>
-    <section class="container" style="float: left; margin-left: 23px;">
-      <table>
-        <th>
-          <td>
-            <div style="padding: 10px;">
-              <a href="https://in.bookmyshow.com/hyderabad/movies/yashoda/ET00323318"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjJrIGxpa2Vz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00323318-dcstamlpka-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-                <br>
-              <h5 class="name" style="color: black;">Yashoda</h5>
-              </a>
-            </div>
-          </td>
-          <td>
-            <div style="padding: 10px;">
-              <a href="https://in.bookmyshow.com/hyderabad/movies/black-panther-wakanda-forever/ET00310792">
-              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjI2ayBsaWtlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00310792-qkfgylplju-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-              <br>
-              <h5 class="name" style="color: black;">Wakanda</h5>
-              </a>
-            </div>
-          </td>
-          <td>
-            <div style="padding: 10px;">
-              <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
-              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC4xLzEwICA3LjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00341179-tylysxlgkl-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-              <br>
-              <h5 class="name" style="color: black;">Urwashi</h5>
-              </a>
-            </div>
-          </td>
-          <td>
-            <div style="padding: 10px;">
-              <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
-              <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
-              <br>
-              <h5 class="name" style="color: black;">Kantara</h5>
-              </a>
-            </div>
-          </td>
-        </th>
-      </table>
-    </section>
+    <div style="position: relative;">
+    <div style="overflow: initial;">
+    <div class="movies">
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/yashoda/ET00323318"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjJrIGxpa2Vz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00323318-dcstamlpka-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+        <br>
+        <h5 class="name" style="color: black;">Yashoda</h5>
+        </a>
+      </div>
 
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/black-panther-wakanda-forever/ET00310792">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjI2ayBsaWtlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00310792-qkfgylplju-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Wakanda</h5>
+        </a>
+      </div>
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Kantara</h5>
+        </a>
+      </div>
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC4xLzEwICA3LjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00341179-tylysxlgkl-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Urwashi</h5>
+          </a>
+      </div>
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Kantara</h5>
+        </a>
+      </div>
+
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Kantara</h5>
+        </a>
+      </div>
+
+      <div>
+        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+          <br>
+          <h5 class="name" style="color: black;">Kantara</h5>
+        </a>
+      </div>
+    </div>
+    </div>
+  </div>
 
     <br><br><br>
     <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/stream-leadin-web-collection-202210241242.png" style="margin-left: 40px;width: 1280px; padding-top: 10px;" class="img-responsive img-fluid">
@@ -88,9 +103,9 @@
       <h3 style="color: white; margin-left: 50px;">Premieres</h3>
       <h5 style="color: white; margin-left: 50px;">Brand new realeses every Friday</h5>
       <br>
-      <section class="container">
-        <div class="row">
-          <div class="col-sm-3">
+
+      <div class="movies">
+        <div>
           <a href="https://in.bookmyshow.com/hyderabad/movies/bullet-train/ET00323863"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:oi-discovery-catalog@@icons@@bms_premiere_v1.png,oit-false,ofo-bottom_left:q-80/et00323863-tkjgnudfgq-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
           <h5 class="name" style="color: black;">Bullet Train</h5>
@@ -98,7 +113,7 @@
           </a>
         </div>
 
-        <div class="col-sm-3">
+        <div>
           <a href="https://in.bookmyshow.com/hyderabad/movies/top-gun-maverick/ET00076943"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:oi-discovery-catalog@@icons@@bms_premiere_v1.png,oit-false,ofo-bottom_left:q-80/et00076943-kxbgajbmzr-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
           <h5 class="name" style="color: black;">Top Gun:Maverick</h5>
@@ -106,23 +121,21 @@
           </a>
         </div>
 
-        <div class="col-sm-3">
+        <div>
           <a href="https://in.bookmyshow.com/hyderabad/movies/what-is-life-worth/ET00333045"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:q-80/et00333045-nlmzmmyhgq-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
           <h5 class="name" style="color: black;">What is life worth</h5>
           <h5 class="name" style="color: black;">English</h5>
           </a>
         </div>
-
-        <div class="col-sm-3">
+        <div>
           <a href="https://in.bookmyshow.com/hyderabad/movies/good-mourning/ET00342778"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:oi-discovery-catalog@@icons@@bms_premiere_v1.png,oit-false,ofo-bottom_left:q-80/et00342778-hdcztebvel-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
           <h5 class="name" style="color: black;">Good Mourning</h5>
           <h5 class="name" style="color: black;">English</h5>
           </a>
         </div>
-        </div>
-      </section>
+      </div>
     </section>
 
 
