--- a/BookMySHOWCopy/book.html
+++ b/BookMySHOWCopy/book.html
@@ -36,7 +36,7 @@
       <li style="float: right; margin-right: 30px;">See all</li>
     </ul>
     <div style="position: relative;">
-    <div style="overflow: initial;">
+    <div style="overflow: initial; padding-left: 50px;">
     <div class="movies">
       <div>
         <a href="https://in.bookmyshow.com/hyderabad/movies/yashoda/ET00323318"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@like_202006280402.png,ox-24,oy-617,ow-29:ote-MjJrIGxpa2Vz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00323318-dcstamlpka-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
@@ -60,50 +60,51 @@
         </a>
       </div>
       <div>
-        <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
+        <a href="https://in.bookmyshow.com/hyderabad/movies/uunchai/ET00335262">
           <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC4xLzEwICA3LjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00341179-tylysxlgkl-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
           <h5 class="name" style="color: black;">Urwashi</h5>
           </a>
       </div>
       <div>
-        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+        <a href="https://in.bookmyshow.com/hyderabad/movies/urvasivo-rakshasivo/ET00341179">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OC42LzEwICA5LjZLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00335262-yduagmklxs-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
-          <h5 class="name" style="color: black;">Kantara</h5>
+          <h5 class="name" style="color: black;">Uunchai</h5>
         </a>
       </div>
 
       <div>
-        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+        <a href="https://in.bookmyshow.com/hyderabad/movies/gaalodu/ET00335450">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS4yLzEwICAxMS4ySyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00335450-dmmmcltnwu-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
-          <h5 class="name" style="color: black;">Kantara</h5>
+          <h5 class="name" style="color: black;">Gaalodu</h5>
         </a>
       </div>
 
       <div>
-        <a href="https://in.bookmyshow.com/hyderabad/movies/kantara-telugu/ET00342026">
-          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS40LzEwICA2NS4xSyB2b3Rlcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00342026-aghcpbcnft-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
+        <a href="https://in.bookmyshow.com/hyderabad/movies/masooda/ET00344434">
+          <img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:oi-discovery-catalog@@icons@@star-icon-202203010609.png,ox-24,oy-615,ow-29:ote-OS4zLzEwICAyLjFLIHZvdGVz,ots-29,otc-FFFFFF,oy-612,ox-70:q-80/et00344434-czmmfyvndb-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
           <br>
-          <h5 class="name" style="color: black;">Kantara</h5>
+          <h5 class="name" style="color: black;">Masooda</h5>
         </a>
       </div>
     </div>
     </div>
   </div>
 
-    <br><br><br>
-    <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/stream-leadin-web-collection-202210241242.png" style="margin-left: 40px;width: 1280px; padding-top: 10px;" class="img-responsive img-fluid">
+    <br><br>
+    <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/stream-leadin-web-collection-202210241242.png" class="center">
 
-    <br><br><br><br>
+    <br><br>
     <section style="background-color:#2c344b;">
-      <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/premiere-banner-web-collection-202208191200.png" style="margin-left: 50px; width: 1280px;" class="img-responsive img-fluid">
+      <img src="https://assets-in.bmscdn.com/discovery-catalog/collections/tr:w-1440,h-120:q-80/premiere-banner-web-collection-202208191200.png" class="center">
       <br><br><br>
       <h3 style="color: white; margin-left: 50px;">Premieres</h3>
       <h5 style="color: white; margin-left: 50px;">Brand new realeses every Friday</h5>
       <br>
-
+      <div style="position: relative;">
+      <div style="overflow: initial; padding-left: 50px;">
       <div class="movies">
         <div>
           <a href="https://in.bookmyshow.com/hyderabad/movies/bullet-train/ET00323863"><img src="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:oi-discovery-catalog@@icons@@bms_premiere_v1.png,oit-false,ofo-bottom_left:q-80/et00323863-tkjgnudfgq-portrait.jpg" class="movie_img" class="img-responsive img-fluid">
@@ -136,6 +137,8 @@
           </a>
         </div>
       </div>
+    </div>
+  </div>
     </section>
 
 
